Adding and Adjusting styles

--- a/portfolio.htm
+++ b/portfolio.htm
@@ -15,8 +15,8 @@
     	<h1>JEREMY FREEHILL</h1>
     </header>
 	<section>
-	    <nav>
-    		<a href="#portfolio"><i class="icon-home"></i></a>
+	    <nav class="small">
+    		<a href="index.htm"><i class="icon-home"></i></a>
     		<a href="#resume"><i class="icon-doc-text"></i></a>
     		<a href="#contact"><i class="icon-mail"></i></a>
     		<a href="#labs"><i class="icon-beaker"></i></a>
