--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,7 @@
 	    		<a href="portfolio.htm">Portfolio<i class="icon-picture"></i></a>
 	    		<a href="#resume">Resume<i class="icon-doc-text"></i></a>
 	    		<a href="#contact">Contact<i class="icon-mail"></i></a>
-	    		<a href="#labs">Experiments<i class="icon-beaker"></i></a>
+	    		<a href="labs.htm">Experiments<i class="icon-beaker"></i></a>
 	    	</nav>
 	    </section>
 	</section>
