font import CSS on other pages

--- a/labs.htm
+++ b/labs.htm
@@ -3,6 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Jeremy Freehill | Portfolio</title>
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Pacifico%7CRaleway:900,500" />
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 
