moving around menu html

--- a/labs.htm
+++ b/labs.htm
@@ -17,6 +17,12 @@
     	<div class="line-5"></div>
     	<h1>JEREMY FREEHILL</h1>
     </header>
+    <nav class="mobile">
+		<a href="index.htm" rel="tooltip"><i class="icon-home"></i><p>Home</p></a>
+		<a href="#resume" rel="tooltip" ><i class="icon-doc-text"></i><p>Resume</p></a>
+		<a href="#contact" rel="tooltip"><i class="icon-mail"></i><p>Contact</p></a>
+		<a href="labs.htm" rel="tooltip" ><i class="icon-beaker"></i><p>Labs</p></a>
+    </nav>
 	<section class="wrap">
 	    <nav class="small">
     		<a href="index.htm" rel="tooltip"><i class="icon-home"></i><p>Home</p></a>
