reverted menu back to slide down, but using different method

--- a/portfolio.htm
+++ b/portfolio.htm
@@ -48,9 +48,9 @@
 	{{~}}
 	</script>
 
-
-	<script type="text/javascript" src="assets/js/lib/zepto.min.js"></script>
-	<script type="text/javascript" src="assets/js/doT.min.js"></script>
-	<script type="text/javascript" src="assets/js/behavior.js"></script>
+	<script src="assets/js/lib/zepto.min.js"></script>
+	<script src="assets/js/lib/gs.custom.min.js"></script>
+	<script src="assets/js/doT.min.js"></script>
+	<script src="assets/js/behavior.js"></script>
 </body>
 </html>
