loading portfolio data as js file instead of ajax json to speed render

--- a/portfolio.htm
+++ b/portfolio.htm
@@ -49,8 +49,8 @@
 	</script>
 
 	<script src="assets/js/lib/zepto.min.js"></script>
-	<script src="assets/js/lib/gs.custom.min.js"></script>
 	<script src="assets/js/doT.min.js"></script>
+	<script src="assets/data/portfolio.js"></script>
 	<script src="assets/js/behavior.js"></script>
 </body>
 </html>
