added LinkedIn profile link for "resume" link; removed html for line shapes

--- a/portfolio.htm
+++ b/portfolio.htm
@@ -10,17 +10,12 @@
 </head>
 <body class="portfolio">
     <header>
-    	<div class="line-1"></div>
-    	<div class="line-2"></div>
-    	<div class="line-3"></div>
-    	<div class="line-4"></div>
-    	<div class="line-5"></div>
     	<h1>JEREMY FREEHILL</h1>
     </header>
 	<section class="wrap">
 	    <nav class="small">
     		<a href="index.htm" rel="tooltip"><i class="icon-home"></i><p>Home</p></a>
-    		<a href="#resume" rel="tooltip" ><i class="icon-doc-text"></i><p>Resume</p></a>
+    		<a href="http://www.linkedin.com/pub/jeremy-freehill/30/846/904" target="_new"><i class="icon-doc-text"></i><p>Resume</p></a>
     		<a href="#contact" rel="tooltip"><i class="icon-mail"></i><p>Contact</p></a>
     		<a href="labs.htm" rel="tooltip" ><i class="icon-beaker"></i><p>Labs</p></a>
 	    </nav>
