--- a/index.htm
+++ b/index.htm
@@ -9,11 +9,6 @@
 </head>
 <body class="home">
     <header>
-    	<div class="line-1"></div>
-    	<div class="line-2"></div>
-    	<div class="line-3"></div>
-    	<div class="line-4"></div>
-    	<div class="line-5"></div>
     	<h1>JEREMY FREEHILL</h1>
     </header>
 	<section>
@@ -21,13 +16,15 @@
 	    <section class="content">
 	    	<nav>
 	    		<a href="portfolio.htm">Portfolio<i class="icon-picture"></i></a>
-	    		<a href="#resume">Resume<i class="icon-doc-text"></i></a>
+	    		<a href="http://www.linkedin.com/pub/jeremy-freehill/30/846/904" target="_new">Resume<i class="icon-doc-text"></i></a>
 	    		<a href="#contact">Contact<i class="icon-mail"></i></a>
 	    		<a href="labs.htm">Experiments<i class="icon-beaker"></i></a>
 	    	</nav>
 	    </section>
 	</section>
-	<footer>
-	</footer>
+
+	<script type="text/javascript" src="assets/js/lib/zepto.min.js"></script>
+	<script type="text/javascript" src="assets/js/doT.min.js"></script>
+	<script type="text/javascript" src="assets/js/behavior.js"></script>
 </body>
 </html>
