--- a/labs.htm
+++ b/labs.htm
@@ -6,32 +6,22 @@
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Pacifico%7CRaleway:900,500" />
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="assets/css/main.css" />
-
 </head>
 <body class="experiments">
     <header>
-    	<div class="line-1"></div>
-    	<div class="line-2"></div>
-    	<div class="line-3"></div>
-    	<div class="line-4"></div>
-    	<div class="line-5"></div>
     	<h1>JEREMY FREEHILL</h1>
     </header>
-    <nav class="mobile">
-		<a href="index.htm" rel="tooltip"><i class="icon-home"></i><p>Home</p></a>
-		<a href="#resume" rel="tooltip" ><i class="icon-doc-text"></i><p>Resume</p></a>
-		<a href="#contact" rel="tooltip"><i class="icon-mail"></i><p>Contact</p></a>
-		<a href="labs.htm" rel="tooltip" ><i class="icon-beaker"></i><p>Labs</p></a>
-    </nav>
 	<section class="wrap">
 	    <nav class="small">
-    		<a href="index.htm" rel="tooltip"><i class="icon-home"></i><p>Home</p></a>
-    		<a href="#resume" rel="tooltip" ><i class="icon-doc-text"></i><p>Resume</p></a>
-    		<a href="#contact" rel="tooltip"><i class="icon-mail"></i><p>Contact</p></a>
-    		<a href="#labs" rel="tooltip" ><i class="icon-beaker"></i><p>Labs</p></a>
+    		<a href="index.htm"><i class="icon-home"></i><p>Home</p></a>
+    		<a href="portfolio.htm"><i class="icon-picture"></i><p>Portfolio</p></a>
+    		<a href="http://www.linkedin.com/pub/jeremy-freehill/30/846/904" target="_new"><i class="icon-doc-text"></i><p>Resume</p></a>
+    		<a href="#contact"><i class="icon-mail"></i><p>Contact</p></a>
 	    </nav>
 	    <a class="open-menu" href="#"><i class="icon-menu"></i></a>
 	    <h2><i class="icon-beaker"></i>Experiments</h2>
+	    <p class="disclaimer"><strong>Note:</strong> The pages listed below are experimental or prototypal and therefore not guaranteed 
+	    	to work in any particular browser. That said, I mostly work in Chrome, so try that one first.</p>
 	    <section class="content">
 	    	<section class="entries">
 	    		<!-- entries added via JS template and JSON -->
