--- a/portfolio.htm
+++ b/portfolio.htm
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- All assets, including HTML are post-processed by Google's 
+	 Apache pagespeed module, thus the strangeness of formattings -->
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Jeremy Freehill | Portfolio</title>
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Pacifico%7CRaleway:900,500" />
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="assets/css/main.css" />
-
 </head>
 <body class="portfolio">
     <header>
@@ -42,7 +43,15 @@
 	</li>
 	{{~}}
 	</script>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+		ga('create', 'UA-43034937-1', 'freehill.me');
+		ga('send', 'pageview');
+	</script>
 	<script src="assets/js/lib/zepto.min.js"></script>
 	<script src="assets/js/doT.min.js"></script>
 	<script src="assets/data/portfolio.js"></script>
