Google webmasters tools verification meta tag

--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="google-site-verification" content="rubl2hD4ILC-qdv1ZIxU5KvHHPPyDUmrWsQi_mN13u4" />
 	<title>Jeremy Freehill | Web Designer & Developer</title>
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Pacifico%7CRaleway:900,500" />
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" />
